--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -14,7 +14,7 @@ $border-color: rgba(0, 0, 0, 0.1); // rgba recommended if using feature images
 
 // Typography colours
 $text-color: #383838;
-$link-color: #1ABC9C;
+$link-color: #2A7900;
 $selection-color: #D4D4D4; // visible when highlighting text
 
 // Header colours
@@ -25,5 +25,5 @@ $feature-image-text-color: #fff;
 $feature-image-size: cover; // options include "cover", "contain", "auto"
 
 // Header description box
-$header-desc-background-color: #F98752; 
+$header-desc-background-color: #4E9D28;
 $header-desc-text-color: #FFF;
