--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -26,4 +26,4 @@ $feature-image-size: cover; // options include "cover", "contain", "auto"
 
 // Header description box
 $header-desc-background-color: #4E9D28;
-$header-desc-text-color: #FFF;
+$header-desc-text-color: #fff;
