--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,4 +20,8 @@ comments: true
 </article>
 
 <!-- Disqus -->
-{% include disqus.html %}
+{% if site.theme.disqus_shortname %}
+<div class="comments">
+  {% include disqus.html %}
+</div>
+{% endif %}
